Revamp lobby styles and update content

--- a/lobby.html
+++ b/lobby.html
@@ -6,18 +6,19 @@
     <title>Gaming Analysis Suite | Lobby</title>
     <style>
         :root {
-            --bg-dark: #0f172a;
-            --card-bg: #1e293b;
-            --accent-blue: #38bdf8;
-            --accent-green: #10b981;
-            --accent-purple: #a855f7;
-            --text-main: #f8fafc;
+            --bg-dark: #070a13;
+            --card-bg: rgba(30, 41, 59, 0.7);
+            --accent-blue: #00d4ff;
+            --accent-green: #00ff88;
+            --accent-purple: #bc6ff1;
+            --text-main: #ffffff;
             --text-dim: #94a3b8;
+            --glass-border: rgba(255, 255, 255, 0.1);
         }
 
         body {
-            font-family: 'Segoe UI', Roboto, sans-serif;
-            background-color: var(--bg-dark);
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            background: radial-gradient(circle at top right, #1e293b, #070a13);
             color: var(--text-main);
             margin: 0;
             padding: 2rem;
@@ -29,130 +30,142 @@
 
         .header {
             text-align: center;
-            margin-bottom: 3rem;
+            margin-bottom: 4rem;
             max-width: 800px;
         }
 
-        .header h1 { font-size: 2.5rem; margin-bottom: 0.5rem; color: var(--text-main); }
-        .header p { color: var(--text-dim); font-size: 1.1rem; }
+        .header h1 { 
+            font-size: 3rem; 
+            margin-bottom: 0.5rem; 
+            letter-spacing: -1px;
+            background: linear-gradient(to right, #fff, var(--accent-blue));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .header p { color: var(--text-dim); font-size: 1.1rem; text-transform: uppercase; letter-spacing: 2px; }
 
         .lobby-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 2.5rem;
             width: 100%;
-            max-width: 1100px;
+            max-width: 1200px;
         }
 
         .card {
             background: var(--card-bg);
-            border-radius: 16px;
-            padding: 2rem;
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border-radius: 24px;
+            padding: 2.5rem;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            transition: all 0.3s ease;
-            border: 1px solid rgba(255,255,255,0.05);
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            border: 1px solid var(--glass-border);
             position: relative;
-            overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
         .card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.4);
-            border-color: rgba(255,255,255,0.15);
+            transform: translateY(-12px);
+            border-color: rgba(255, 255, 255, 0.3);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.7);
         }
 
         .badge {
             font-size: 0.7rem;
-            letter-spacing: 1px;
-            padding: 0.3rem 0.8rem;
-            border-radius: 4px;
-            font-weight: 900;
+            letter-spacing: 1.5px;
+            padding: 0.4rem 1rem;
+            border-radius: 6px;
+            font-weight: 800;
             display: inline-block;
-            margin-bottom: 1.2rem;
+            margin-bottom: 1.5rem;
             text-transform: uppercase;
         }
 
-        /* Roulette Dev Card */
-        .main-tracker { border-top: 5px solid var(--accent-blue); }
-        .badge-dev { background: var(--accent-blue); color: #0f172a; }
+        /* Card Themes */
+        .stable-tracker { border-bottom: 4px solid var(--accent-green); }
+        .badge-stable { background: rgba(0, 255, 136, 0.15); color: var(--accent-green); border: 1px solid var(--accent-green); }
 
-        /* Stable V68 Card */
-        .stable-tracker { border-top: 5px solid var(--accent-green); }
-        .badge-stable { background: var(--accent-green); color: #0f172a; }
+        .main-tracker { border-bottom: 4px solid var(--accent-blue); }
+        .badge-dev { background: rgba(0, 212, 255, 0.15); color: var(--accent-blue); border: 1px solid var(--accent-blue); }
 
-        /* Dice Master Coming Soon */
-        .dice-tracker { border-top: 5px solid var(--accent-purple); opacity: 0.85; }
-        .badge-soon { background: var(--accent-purple); color: #f8fafc; }
+        .dice-tracker { border-bottom: 4px solid var(--accent-purple); opacity: 0.7; }
+        .badge-soon { background: rgba(188, 111, 241, 0.15); color: var(--accent-purple); border: 1px solid var(--accent-purple); }
 
-        h2 { margin: 0 0 0.75rem 0; font-size: 1.6rem; color: var(--text-main); }
-        p { line-height: 1.6; color: var(--text-dim); margin-bottom: 2.5rem; font-size: 0.95rem; }
+        h2 { margin: 0 0 1rem 0; font-size: 1.8rem; font-weight: 700; }
+        p { line-height: 1.7; color: var(--text-dim); margin-bottom: 3rem; font-size: 1rem; }
 
         .btn {
             display: block;
             text-align: center;
             text-decoration: none;
-            padding: 1rem;
-            border-radius: 8px;
-            font-weight: bold;
+            padding: 1.2rem;
+            border-radius: 12px;
+            font-weight: 700;
             font-size: 1rem;
-            transition: all 0.2s ease;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
         }
 
-        .btn-main { background: var(--accent-blue); color: #0f172a; }
-        .btn-stable { background: var(--accent-green); color: #0f172a; }
-        .btn-disabled { background: #334155; color: #94a3b8; cursor: not-allowed; }
+        .btn-stable { background: var(--accent-green); color: #051a10; }
+        .btn-main { background: var(--accent-blue); color: #021a24; }
+        .btn-disabled { background: #334155; color: #64748b; cursor: not-allowed; }
         
         .btn:not(.btn-disabled):hover { 
             filter: brightness(1.1);
-            letter-spacing: 0.5px;
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.4);
         }
+
+        .btn-main:hover { box-shadow: 0 0 20px rgba(0, 212, 255, 0.4); }
 
         .dice-icon {
             position: absolute;
-            top: 10px;
-            right: 15px;
-            font-size: 3rem;
-            opacity: 0.1;
+            top: 20px;
+            right: 25px;
+            font-size: 3.5rem;
+            opacity: 0.05;
         }
     </style>
 </head>
 <body>
 
     <header class="header">
-        <h1>Gaming Analysis Suite</h1>
-        <p>Main Lobby</p>
+        <h1>COMMAND CENTER</h1>
+        <p>Strategic Gaming Analysis</p>
     </header>
 
     <div class="lobby-grid">
         
         <div class="card stable-tracker">
             <div>
-                <span class="badge badge-stable">Stable Release</span>
+                <span class="badge badge-stable">Deployment Ready</span>
                 <h2>Roulette v68</h2>
-                <p>Official stable version. Reliable tracking and basic analysis tools without experimental engine updates.</p>
+                <p>Standalone stable build. Features Nine-Street logic, Cold Hunt strategies, and standard Martingale protocols.</p>
             </div>
-            <a href="v68-roulette.html" class="btn btn-stable">Launch v68 Stable</a>
+            <a href="v68-roulette.html" class="btn btn-stable">Initialize v68</a>
         </div>
 
         <div class="card main-tracker">
             <div>
-                <span class="badge badge-dev">In Development</span>
+                <span class="badge badge-dev">Engine Update</span>
                 <h2>Strategic Engine</h2>
-                <p>Features independent unit tracking, dynamic lookback windows, and advanced "Staircase" Martingale recovery logic.</p>
+                <p>Advanced build with Independent Unit Tracking, Staircase Multipliers, and Dynamic Lookback Windows.</p>
             </div>
-            <a href="roulette.html" class="btn btn-main">Launch Dev Build</a>
+            <a href="roulette.html" class="btn btn-main">Initialize Engine</a>
         </div>
 
         <div class="card dice-tracker">
             <div class="dice-icon">🎲</div>
             <div>
-                <span class="badge badge-soon">Coming Soon</span>
+                <span class="badge badge-soon">Classified</span>
                 <h2>Dice Master</h2>
                 <p>Probability tracking for Craps and Sic Bo. Advanced dice-influence analytics engine in development.</p>
             </div>
-            <a href="#" class="btn btn-disabled">Under Construction</a>
+            <a href="#" class="btn btn-disabled">Locked</a>
         </div>
 
     </div>
