--- a/lobby.html
+++ b/lobby.html
@@ -18,7 +18,6 @@
             color: #f8fafc;
             font-family: 'Cinzel', serif;
             min-height: 100vh;
-            /* Balanced gradient for mobile visibility */
             background-image: linear-gradient(to bottom, rgba(2, 6, 23, 0.3) 0%, rgba(2, 6, 23, 0.9) 100%), 
                               url('https://zomb13lord.github.io/zombielords-playhouse/background.png');
             background-size: cover;
@@ -85,14 +84,22 @@
     <main class="flex-grow flex flex-col items-center justify-center p-6 md:p-12">
         <header class="mb-12 text-center pt-20 md:pt-0">
             <h1 class="text-4xl md:text-6xl font-black mb-2 tracking-tight uppercase">Playhouse</h1>
-            <p class="text-emerald-500/80 text-[10px] tracking-[0.4em] uppercase font-bold">Select Your Trial</p>
+            <p class="emerald-text text-[10px] tracking-[0.4em] uppercase font-bold">Select Your Trial</p>
         </header>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 w-full max-w-4xl">
-            <div class="shard-card p-8 rounded-sm cursor-pointer group" onclick="window.location.href='roulette.html'">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-full max-w-6xl">
+            
+            <div class="shard-card p-8 rounded-sm cursor-pointer group" onclick="window.location.href='v68-roulette.html'">
+                <div class="text-4xl mb-6 grayscale group-hover:grayscale-0 transition-all duration-500">🛡️</div>
+                <h3 class="text-xl font-black mb-3 uppercase tracking-wider group-hover:emerald-text transition-colors">Stable v68</h3>
+                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">The proven foundation. Reliable tracking for standard 9-Street campaigns.</p>
+                <div class="text-[10px] font-bold text-emerald-400 tracking-[0.3em] uppercase border-t border-emerald-900/30 pt-4">Enter Node &rarr;</div>
+            </div>
+
+            <div class="shard-card p-8 rounded-sm cursor-pointer group border-emerald-500/50" onclick="window.location.href='roulette.html'">
                 <div class="text-4xl mb-6 grayscale group-hover:grayscale-0 transition-all duration-500">🎡</div>
-                <h3 class="text-xl font-black mb-3 uppercase tracking-wider group-hover:emerald-text transition-colors">Roulette Engine</h3>
-                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">9-Street Hybrid Analysis. Monitor the wheel through the eyes of the Emerald King.</p>
+                <h3 class="text-xl font-black mb-3 uppercase tracking-wider group-hover:emerald-text transition-colors">Strategic Engine</h3>
+                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">Advanced Alpha logic. Staircase recovery and independent unit tracking active.</p>
                 <div class="text-[10px] font-bold text-emerald-400 tracking-[0.3em] uppercase border-t border-emerald-900/30 pt-4">Begin Session &rarr;</div>
             </div>
 
@@ -103,6 +110,7 @@
                 <div class="absolute top-4 right-4 text-[8px] bg-slate-900/80 border border-slate-700 px-2 py-1 tracking-widest uppercase font-bold text-slate-500">Locked</div>
                 <div class="text-[10px] font-bold text-slate-600 tracking-[0.3em] uppercase border-t border-slate-800 pt-4">In Development</div>
             </div>
+
         </div>
     </main>
 
